# ZaawansowanyCpp

./: .gitignore  CMakeLists.txt  Communication.h  DAGenerator.cpp  DAGenerator.h  InputBuilder.cpp  InputBuilder.h  Process.cpp  Process.h  README.md  Task.cpp  Task.h  TasksContainer.cpp  TasksContainer.h  Z_CPP_1.sln  Z_CPP_1.vcxproj  main.cpp  tests_run.cpp
tests/: communication_tests.cpp  dagenerator_tests.cpp  inputbuilder_tests.cpp  task_tests.cpp
